# a2a-examples

./: .gitignore  LICENSE  README.md  config.py  main.py  pixi.toml  pyproject.toml  requirements.txt
agents/: __init__.py  bias_interrogator.py  chat_agent.py
bias-agents/: README.md  main.py  pixi.toml  pyproject.toml  requirements.txt
bias-agents/agents/: __init__.py  bias_interrogator.py  chat_agent.py
bias-agents/examples/: quick_test.py
configs/: README.md  config.example.json  config.example.toml  config.example.yaml  multi-model.example.yaml
examples/: __init__.py  quick_test.py
face_recognition/: README.md  __init__.py  client_example.py  conversation_example.py  example_usage.py  face_recognition_agent.py  pixi.toml  pyproject.toml  requirements.txt  server.py  speech_interface.py
