[project]
name = "a2a-agents-example"
version = "0.1.0"
description = "Example of A2A agents using pydantic-ai and Google's a2a-sdk with Ollama"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
