[project]
name = "face-recognition-agent"
version = "0.1.0"
description = "Webcam-based face recognition agent with A2A protocol support"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "deepface>=0.0.79",
    "tf-keras>=2.16.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
